[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/inventory/empty_slot.png" type="Texture" id=1]
[ext_resource path="res://inventory/scripts/Inventory_Slot_Display.gd" type="Script" id=2]
[ext_resource path="res://assets/item/ash.png" type="Texture" id=3]
[ext_resource path="res://assets/font/dynamic_font.tres" type="DynamicFont" id=4]

[node name="Inventory_Slot_Display" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0603334
margin_bottom = -0.0603027
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTextureRect" type="TextureRect" parent="."]
margin_left = 632.0
margin_top = 352.0
margin_right = 648.0
margin_bottom = 368.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotTextureRect" type="TextureRect" parent="."]
margin_left = 608.0
margin_top = 328.0
margin_right = 672.0
margin_bottom = 392.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="AmountLabel" type="Label" parent="SlotTextureRect"]
margin_left = 38.7799
margin_top = 42.8215
margin_right = 56.7799
margin_bottom = 56.8215
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
